syntax = "proto3";
package pbgo;

// 客服端消息
message ClientMessageReq {
    bytes Body = 1;
    string Uid = 2;
}

message ClientMessageRsp {
    bytes Body = 1;
}

// 客户端上线
message ClientOnline {
    string Uid = 2;
}

// 客户端上线
message ClientOffline {
    string Uid = 2;
}
